# dotfiles

./: .bash_profile  .bashrc  .gitignore  .gitmodules  .gnus  .spacemacs  .zshrc  LICENSE  README.md  README.org  bashrc  bookmarks  cp_dotfiles.sh  custom.el  custom_szu_160228.el  init-local.el  latex_beamer_template.tex  org_template_szu.org  rssfeeds.org  update_dotfiles.sh
FAQs/tips/: Linux.org  MacOS.org
cmake/t1/: CMakeLists.txt
cmake/t1/lib/: hello.c
cmake/t4/: CMakeLists.txt
cmake/t4/src/: CMakeLists.txt  main.c
dotspacemacsPrivate/doggypoo/: README.org  packages.el
dotspacemacsPrivate/writes/: README.org
emacs/: .emacs-custom.el  .gnus  .spacemacs  bookmarks  init-local.el  rssfeeds.org
emacs/dotspacemacsPrivate/writes/: packages.el
emacs/info/: dir
emacs/info/python27doc/: python.info  python.info-1  python.info-10  python.info-11  python.info-12  python.info-13  python.info-14  python.info-15  python.info-16  python.info-17  python.info-18  python.info-19  python.info-2  python.info-20  python.info-21  python.info-22  python.info-23  python.info-24  python.info-25  python.info-26  python.info-27  python.info-3  python.info-4  python.info-5  python.info-6  python.info-7  python.info-8  python.info-9
emacs/layer/beyondpie-doggypoo/: config.el  funcs.el  packages.el
emacs/layer/beyondpie-gnugo/: config.el  funcs.el
emacs/layer/beyondpie-org/: config.el
emacs/layer/beyondpie-programming/: config.el  (+2 more)
env/: .bash_profile  .bashrc  .vimrc
info/: dir
presentation/: ppt_template_szu.pptx
tips/: Emacs.org  MySQL.org
tricks/: Emacs.org
(+6 files in other folders)
