CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(HELLO)
#SET(SRC_LIST main.c)
ADD_SUBDIRECTORY(lib)
#ADD_SUBDIRECTORY(src bin)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
INSTALL(FILES COPYRIGHT README DESTINATION share/doc)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc)
#ADD_EXECUTABLE(hello ${SRC_LIST})
